fix: Enrollment Bugs