@@ -1,11 +1,22 @@
 package com.compass.desafio02.web.controller;
 
+import com.compass.desafio02.domain.entities.Course;
 import com.compass.desafio02.domain.entities.Enrollment;
+import com.compass.desafio02.domain.entities.Student;
+import com.compass.desafio02.domain.repositories.projection.StudentProjection;
+import com.compass.desafio02.domain.services.CourseService;
 import com.compass.desafio02.domain.services.EnrollmentService;
+import com.compass.desafio02.domain.services.StudentService;
+import com.compass.desafio02.web.dto.PageableDto;
 import com.compass.desafio02.web.dto.enrollment.enrollmentCreateDto;
 import com.compass.desafio02.web.dto.enrollment.EnrollmentResponseDto;
 import com.compass.desafio02.web.dto.mapper.EnrollmentMapper;
+import com.compass.desafio02.web.dto.mapper.PageableMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.web.PageableDefault;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
@@ -21,29 +32,40 @@ public class EnrollmentController {
     @Autowired
     private EnrollmentService enrollmentService;
 
-    @PreAuthorize("hasRole('COORDINATOR')")
+    @Autowired
+    private StudentService studentService;
+
+    @Autowired
+    private CourseService courseService;
+
+//    @PreAuthorize("hasRole('COORDINATOR')")
     @PostMapping
     public ResponseEntity<EnrollmentResponseDto> createEnrollment(@Valid @RequestBody enrollmentCreateDto dto) {
-        Enrollment enrollment = enrollmentService.createEnrollment(dto.getStudentId(), dto.getCourseId());
+        Student student = studentService.findByEmail(dto.getStudentEmail());
+        Course course = courseService.findByName(dto.getCourseName());
+        Enrollment enrollment = enrollmentService.createEnrollment(course.getId(), student.getId());
         return ResponseEntity.status(201).body(EnrollmentMapper.toDto(enrollment));
     }
 
     @GetMapping
-    public ResponseEntity<List<EnrollmentResponseDto>> getAllEnrollments() {
-        List<Enrollment> enrollments = enrollmentService.getAllEnrollments();
-        List<EnrollmentResponseDto> enrollmentDtos = enrollments.stream()
+    public ResponseEntity<PageableDto> getAllEnrollments(@PageableDefault(size = 5) Pageable pageable) {
+        Page<Enrollment> enrollments = enrollmentService.getAllEnrollments(pageable);
+
+        List<EnrollmentResponseDto> enrollmentDtos = enrollments.getContent().stream()
                 .map(EnrollmentMapper::toDto)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(enrollmentDtos);
+                .toList();
+
+        Page<EnrollmentResponseDto> enrollmentDtosPage = new PageImpl<>(enrollmentDtos, pageable, enrollments.getTotalElements());
+        return ResponseEntity.ok(PageableMapper.toDto(enrollmentDtosPage, EnrollmentResponseDto.class));
     }
 
-    @GetMapping("{id}")
+    @GetMapping("/{id}")
     public ResponseEntity<EnrollmentResponseDto> getEnrollmentById(@PathVariable Integer id) {
         Enrollment enrollment = enrollmentService.findEnrollmentById(id);
         return ResponseEntity.ok(EnrollmentMapper.toDto(enrollment));
     }
 
-    @DeleteMapping("{id}")
+    @DeleteMapping("/{id}")
     public ResponseEntity<Void> deleteEnrollment(@PathVariable Integer id) {
         enrollmentService.deleteEnrollment(id);
         return ResponseEntity.noContent().build();
